--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         
                                     </a>
                                   
-                                    <ul class="dropdown-menu mt-4">
+                                    <ul class="dropdown-menu mt-4 d-m-nav">
                                       <li><a class="dropdown-item" href="#">Action</a></li>
                                       <li><a class="dropdown-item" href="#">Another action</a></li>
                                       <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -150,7 +150,7 @@
                                                 +
                                             </button>
 
-                                            <ul class="dropdown-menu">
+                                            <ul class="dropdown-menu d-m-pills">
                                               <!-- Dropdown menu links -->
                                                 <li>
                                                     <span class="badge rounded-pill">Boolean mobile app</span>
@@ -515,25 +515,27 @@
                                         </div>
                                     </div>
 
-                                    <div class="card mt-3">
-                                        <div>
-                                            <img src="./assets/img/stats.jpeg" alt="">
-                                        </div>
-                                        <div class="px-2 py-2 border-bottom border-secondary-subtle">
-                                            <h3>Utenti attivi</h3>
-                                            <span>Lista degli utenti attivi in piattaforma nell'ultimo mese</span>
-                                        </div>
-                                        <div class="px-2 py-2 border-bottom border-secondary-subtle">
-                                            <span>Gennaio: 1200</span>
-                                        </div>
-                                        <div class="px-2 py-2 border-bottom border-secondary-subtle">
-                                            <span>Febbraio: 800</span>
-                                        </div>
-                                        <div class="px-2 py-2 border-bottom border-secondary-subtle">
-                                            <span>Marzo: 1500</span>
-                                        </div>
-                                        <div class="px-2 py-2">
-                                            <a href="#" class="text-decoration-underline">Visualizza report approfondito</a>
+                                    <div class="card mt-3 p-2">
+                                        <div class="border rounded">
+                                            <div>
+                                                <img src="./assets/img/stats.jpeg" alt="">
+                                            </div>
+                                            <div class="px-2 py-2 border-bottom border-secondary-subtle">
+                                                <h3>Utenti attivi</h3>
+                                                <span>Lista degli utenti attivi in piattaforma nell'ultimo mese</span>
+                                            </div>
+                                            <div class="px-2 py-2 border-bottom border-secondary-subtle">
+                                                <span>Gennaio: 1200</span>
+                                            </div>
+                                            <div class="px-2 py-2 border-bottom border-secondary-subtle">
+                                                <span>Febbraio: 800</span>
+                                            </div>
+                                            <div class="px-2 py-2 border-bottom border-secondary-subtle">
+                                                <span>Marzo: 1500</span>
+                                            </div>
+                                            <div class="px-2 py-2">
+                                                <a href="#" class="text-decoration-underline">Visualizza report approfondito</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
